2008-06-13  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* GCSFolder.m: modified the fetchFields* methods so that any field
	from the quick and/or content table will generate an appropriate
	query. If both tables are required, a joined query is generated.

	* GCSFolderType.m ([GCSFolderType -fields]): new method that
	returns the fields used by the quick tables.

2008-01-21  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* GCSFolderManager.m ([GCSFolderManager
	-baseTableNameWithUID:_uid]): the id was too long for the quick
	tables, we reduce the length of the increment string to 3
	characters instead of 8.

2008-01-16  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* GCSFolderManager.m ([GCSFolderManager -baseTableNameWithUID:]):
	generate an id that is guaranteed to be unique in more than
	1000000 cases (from unit testing).

	* GCSFolder.m: fetch the content, version and dates at the same
	time per record, to avoid multiple queries.

2007-12-12  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* GCSFolder.m ([GCSFolder -creationDateOfEntryWithName:]): new
	method that returns the creation date of the specified entry.
	([GCSFolder -lastModificationOfEntryWithName:]): same as above for
	the last modification time.

2007-11-27  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* GCSFolder.m ([GCSFolder -versionOfContentWithName:], [GCSFolder
	-fetchContentWithName:]): ignore records marked as deleted.
	([GCSFolder -deletionOfContentWithName:]): don't.

2007-11-04  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* GCSFolder.m ([GCSFolder -writeContent:toName:baseVersion:]): the
	test for the improvement below was wrong, we want to test the
	value of the column ('0' or null) instead of whether it is null or
	filled.

2007-10-29  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* GCSFolder.m ([GCSFolder -writeContent:toName:baseVersion:]):
	purge the record if previously marked as deleted.

2007-10-24  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
