@@ -1,3 +1,8 @@
+2008-06-23  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
+
+	* GCSFolderManager.m ([GCSFolderManager
+	-createFolderOfType:withName:atPath:]): escape the display names.
+
 2008-06-13  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
 
 	* GCSFolder.m: modified the fetchFields* methods so that any field
